# beerio-kart

./: .dockerignore  .editorconfig  .env.example  .env.production.example  .gitattributes  .gitignore  .lycheeignore  Cargo.toml  DESIGN.md  Dockerfile  README.md  codecov.yml  compose.yaml  justfile  lefthook.yml  package.json  rust-toolchain.toml
.agents/handoffs/: README.md
.claude/: CLAUDE.md
.claude/skills/code-review/: SKILL.md
.claude/skills/design-review/: SKILL.md
.claude/skills/post-merge/: SKILL.md  cleanup.sh
.claude/skills/test-quality-review/: SKILL.md
.claude/skills/updating-skills/: SKILL.md
.github/: branch-protection-ruleset.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/scripts/: detect-changes.sh  dto-drift-check.sh
.github/workflows/: backend.yml  checks.yml  coverage.yml  dto-drift.yml  frontend.yml  link-check.yml
backend/: .gitignore  CLAUDE.md  Cargo.toml  README.md
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20260101_000001_initial_schema.rs  m20260330_000001_create_base_tables.rs  m20260330_000002_create_tracks.rs  m20260330_000003_create_drink_types.rs  m20260330_000004_create_users.rs  m20260330_000005_add_drink_types_created_by.rs  m20260330_000006_create_runs.rs  m20260330_000007_create_run_flags.rs  m20260330_000008_create_sessions.rs  m20260330_000009_create_session_participants.rs  m20260330_000010_create_session_races.rs  m20260330_000011_recreate_runs.rs  m20260330_000012_add_runs_unique_constraint.rs  m20260331_000001_add_username_lower.rs
backend/src/: config.rs  db.rs  drink_type_id.rs  error.rs  extract.rs  lib.rs  main.rs  seed.rs  shutdown.rs  test_helpers.rs  timeout.rs
backend/src/domain/: enums.rs  ids.rs  mod.rs  numeric.rs  race_setup.rs  strings.rs
backend/src/entities/: bodies.rs  characters.rs  cups.rs  drink_types.rs  drink_types_behavior.rs  gliders.rs  mod.rs  notifications.rs  notifications_behavior.rs  prelude.rs  refresh_tokens.rs  refresh_tokens_behavior.rs  run_flags.rs  run_flags_behavior.rs  runs.rs  runs_behavior.rs  session_participants.rs  session_race_participations.rs  session_race_participations_behavior.rs  session_races.rs  session_races_behavior.rs  sessions.rs  sessions_behavior.rs  tracks.rs  users.rs  users_behavior.rs  wheels.rs
backend/src/middleware/: auth.rs  limits.rs  mod.rs
backend/src/routes/: auth.rs  drink_types.rs  game_data.rs  mod.rs  notifications.rs  runs.rs  sessions.rs  users.rs
backend/src/services/: auth.rs  helpers.rs  mod.rs  notifications.rs  runs.rs  session_context.rs  sessions.rs  users.rs
backend/src/services/runs/: read.rs  submission.rs
backend/src/services/sessions/: detail.rs  lifecycle.rs  races.rs  types.rs
backend/tests/: api_integration.rs  auth_integration.rs  auth_middleware.rs  db_timeout.rs  middleware_limits.rs  schema_drift.rs  session_integration.rs
backend/tests/snapshots/: api_integration__cup_1_with_tracks.snap
data/: README.md  bodies.json  characters.json  cups.json  drink_types.json  gliders.json  tracks.json  wheels.json
docs/: CLAUDE.md  DESIGN.md  README.md  api-contract.md  branch-protection.md  compliance-plan.md  data-model.md  design.md  lychee-test.md  project-field-ids.md  project-workflow.md  roadmap.md  user-workflows.md  workflow.md
docs/coding-standards/: README.md  react.md  rust.md  seaorm.md  tailwind.md  testing.md  tokio.md  typescript.md
docs/decisions/: 0001-sessions-no-created-by-column.md  0002-sqlite-strict-mode-on-static-tables.md  0003-global-leaderboard-most-track-records.md  0004-account-recovery-admin-reset.md  0005-no-time-entry-validation.md  0006-beer-vs-water-separate-leaderboards.md  0007-track-variants-150cc-only.md  0008-admin-model-env-var-gated.md  0009-run-immutability-admin-can-edit.md  0010-h2h-derived-from-session-races.md  0011-sessions-replace-standalone-runs.md  0012-dqd-runs-recorded-but-excluded.md  0013-pending-race-cap.md  0014-session-host-transfer.md  0015-session-timeout-skip-turn.md  0016-session-passwords-deferred.md  0017-ruleset-changes-mid-session-deferred.md  0018-realtime-via-polling-not-websockets.md  0019-admin-defense-in-depth.md  0020-photo-upload-validation.md  0021-upload-path-isolation.md  0022-rulesets-as-rust-trait.md  0023-hand-written-seaorm-entities.md  0024-just-not-make-for-dev-commands.md  0025-photo-enforcement-for-records.md  0026-lap-time-column-naming.md  0027-uuid-storage-as-text-in-sqlite.md  0028-timestamp-storage-as-iso8601-text.md  0029-run-flags-audit-trail.md  0030-frontend-served-from-axum.md  0031-auth-token-strategy.md  0032-cursor-based-pagination.md  0033-cloudflare-tunnel-for-exposure.md  0034-docker-compose-manager-for-deployment.md  0035-race-anchored-session-lifetime.md  0036-error-code-rollout.md  0037-pending-races-dropped-on-session-close.md  0038-notifications-system.md  0039-api-client-generation.md  0040-refresh-token-reuse-detection.md  (+2 more)
docs/designs/: 2026-04-15-rust-audit.md  2026-04-19-pending-races-and-grace-period.md  2026-05-02-entity-codegen-strategy.md  2026-05-04-build-orchestration.md  2026-05-04-ci-adoption.md  2026-05-04-design-doc-restructure.md  2026-05-04-session-ux-followups.md  2026-05-16-frontend-audit.md  2026-05-16-frontend-compliance-plan.md
docs/designs/archive/: 2026-04-15-rust-audit.md  2026-04-19-pending-races-and-grace-period.md  2026-05-02-entity-codegen-strategy.md  2026-05-02-sessions-created-by-removal.md  2026-05-04-design-doc-restructure.md  2026-05-16-frontend-audit.md  2026-05-16-frontend-compliance-plan.md  compliance-plan.md
docs/handoffs/: README.md
docs/research/: ci-options.md  ocr-strategy.md  rust-to-ts-codegen.md  seaorm_2_0_migration.md  unit-test-audit.md
frontend/: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  routing.test.tsx  setupTests.ts
tools/: README.md  change-password  clear-state  env.sh  login  logout  refresh  register
(+67 files in other folders)
