[workspace]
members = ["migration"]

[workspace.lints.rust]
warnings = "deny"
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# `cargo` group — relevant for crates.io publishing, not an internal binary:
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
# Phase H scaffolding — clear each in a follow-up PR per rust.md § 8:
needless_raw_string_hashes = "allow"
too_many_lines = "allow"
# High-value extras:
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
todo = "warn"
unimplemented = "warn"
expect_used = "warn"
unwrap_used = "warn"
panic = "warn"
# Async (catastrophic if missed) — see tokio.md § 3:
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
unused_async = "warn"

[package]
name = "beerio-kart"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
# `ActiveModelBehavior::before_save` is an async trait method; SeaORM 1.x
# defines the trait via `#[async_trait]`, so overriding it requires the same
# macro on our impl. SeaORM doesn't re-export `async_trait`, so we depend on
# it directly. See `entities/*_behavior.rs`.
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# `limit` for ConcurrencyLimitLayer, `load-shed` for LoadShedLayer (turns
# ConcurrencyLimit's "queue indefinitely" into "shed with Overloaded" so the
# stack returns 503 on saturation instead of hanging). Timeout uses
# `tower-http`'s HTTP-aware version — see main.rs for why.
tower = { version = "0.5", features = ["limit", "load-shed"] }
# `limit` pulls in RequestBodyLimitLayer; `timeout` pulls in TimeoutLayer
# (the HTTP-aware sibling of `tower::timeout` — see main.rs comment).
tower-http = { version = "0.6", features = ["trace", "fs", "limit", "timeout"] }
# Per-IP rate limiting (tokio.md § 12 — `RateLimitLayer` from `tower` produces
# a non-`Clone` service that axum can't use; `tower-governor` is the standard
# alternative).
tower_governor = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "v5"] }
dotenvy = "0.15"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
migration = { path = "migration" }
# Direct sqlx for SqliteConnectOptions / SqlitePoolOptions — needed for
# per-connection PRAGMA control (see src/db.rs and seaorm.md § 8). Version
# pinned to the sqlx that sea-orm 1.x bundles internally.
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
# log::LevelFilter for sqlx logging configuration.
log = "0.4"

[lints]
workspace = true

[dev-dependencies]
axum-test = "19.1.1"
cookie = "0.18"
tower = "0.5.3"
# Captures `tracing` events inside a test and exposes `logs_contain(...)`. Used by
# error.rs tests to assert the client/detail split: driver-string detail must
# reach `tracing::warn!` but must not reach the response body. See Issue #84.
tracing-test = "0.2"
# Table-driven test cases (rust.md § 7). Reach for it when the same logic
# runs over half-a-dozen inputs.
rstest = "0.23"
# Snapshot assertions for HTTP response bodies in integration tests
# (rust.md § 7). Updates land via `cargo insta accept`.
insta = { version = "1.41", features = ["json"] }
